@@ -13,20 +13,16 @@ import org.bukkit.event.entity.ProjectileHitEvent;
 public class ExplodingArrowsListener implements Listener{
 
 	private ChatCommands plugin;
-
 	public ExplodingArrowsListener(ChatCommands plugin){
 		this.plugin = plugin;
-
 	}
 
 	@EventHandler(priority = EventPriority.NORMAL)
 	public void onProjectileHit(ProjectileHitEvent event) {
 		Entity entity = event.getEntity();
-
 		if (entity instanceof Arrow) {
 			Arrow arrow = (Arrow) entity;
 			Entity shooter = arrow.getShooter();
-
 			if (shooter instanceof Player) {
 				Player player = (Player) shooter;
 				if (player.hasPermission("notaro.ea") || player.hasPermission("notaro.*")){
